--- a/public/package.json
+++ b/public/package.json
@@ -6,7 +6,7 @@
     "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
     "start": "npm run build && cd server && node server.js",
     "server": "cd server nodemon server.js --ignore client",
-    "build": "cd client && npm run build",
+    "build": "next build && next export -o public",
     "install": "cd server && npm i && cd ../client && npm i",
     "client": "cd client && npm start"
   },
